# base-python-project

./: .pre-commit-config.yaml  pyproject.toml
